--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Great Web Agency
 email: angelaamongstrangers@gmail.com
 description: "Great web agency offer high impact yet affordable web development services. From web design to targeted SEO to custom web applications."
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://http://127.0.0.1:4000/demosite" # the base hostname & protocol for your site
+url: "https://angelaamongstrangers.github.io/demosite" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
